--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.114.114.19, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 149.202.82.172, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇬🇧 英国-1.47MB/s(Youtube:不良林), server: 172.99.190.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 波兰-270.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-555.0KB/s(Youtube:不良林), server: 145.239.1.100, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-190.3KB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.47MB/s(Youtube:不良林)
-      - 波兰-270.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
