--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.114.114.19, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 149.202.82.172, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1013.2KB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 145.239.1.100, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
   - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 145.239.1.100, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-555.0KB/s(Youtube:不良林), server: 145.239.1.100, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 保加利亚-462.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-190.3KB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-555.0KB/s(Youtube:不良林)
+      - 保加利亚-462.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
