--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1013.2KB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 145.239.1.100, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 保加利亚-462.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-153.9KB/s(Youtube:不良林), server: 213.183.59.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-458.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 172.99.190.39, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-1.03MB/s(Youtube:不良林), server: 172.99.190.39, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇬🇧 英国-1.30MB/s(Youtube:不良林), server: 172.99.190.39, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-190.3KB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1013.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-691.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 保加利亚-462.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
 rules:
