--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 38.114.114.69, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇳🇱 荷兰-203.1KB/s(Youtube:不良林), server: 213.183.51.172, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇬🇧 英国-1.03MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 149.202.82.172, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇫🇷 法国-1.01MB/s(Youtube:不良林), server: 145.239.1.100, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: 38.114.114.19, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.64.138.145, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 167.88.63.79, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-203.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-212.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
